cmake_minimum_required(VERSION 3.2)

set(PROJECT_NAME "Swinemeeper")
project(${PROJECT_NAME})

set(CMAKE_BUILD_TYPE "DEBUG")

set(PROJECT_DIRECTORY "${CMAKE_SOURCE_DIR}")

enable_language(CXX)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -march=native")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mtune=native")
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -ggdb3")
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Og")
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -Ofast")

set(CMAKE_SHARED_LIBRARY_PREFIX "")
set(CMAKE_SHARED_MODULE_PREFIX "")
set(CMAKE_SHARED_MODULE_SUFFIX "")

set(CMAKE_INSTALL_PREFIX "./install")

set(CMAKE_INSTALL_RPATH "$ORIGIN")

## LEXICON ##

set(LEXICON_NAME "lexicon")

set(LEXICON_LIBRARIES "")
file(GLOB LEXICON_FILES
    "${PROJECT_DIRECTORY}/${LEXICON_NAME}/*.c"
    "${PROJECT_DIRECTORY}/${LEXICON_NAME}/*.h"
    "${PROJECT_DIRECTORY}/${LEXICON_NAME}/*.cpp"
    "${PROJECT_DIRECTORY}/${LEXICON_NAME}/*.hpp"
)

add_library(${LEXICON_NAME} SHARED ${LEXICON_FILES})
target_include_directories(${LEXICON_NAME} PUBLIC "${PROJECT_DIRECTORY}")
target_include_directories(${LEXICON_NAME} PUBLIC "${PROJECT_DIRECTORY}/${LEXICON_NAME}")
target_link_libraries(${LEXICON_NAME} ${LEXICON_LIBRARIES})
install(
    TARGETS ${LEXICON_NAME}
    LIBRARY DESTINATION "."
)

## GAME MASTER ##

set(GAMEMASTER_NAME "gamemaster")

set(GAMEMASTER_LIBRARIES "-ldl")
file(GLOB GAMEMASTER_FILES
    "${PROJECT_DIRECTORY}/${GAMEMASTER_NAME}/*.c"
    "${PROJECT_DIRECTORY}/${GAMEMASTER_NAME}/*.h"
    "${PROJECT_DIRECTORY}/${GAMEMASTER_NAME}/*.cpp"
    "${PROJECT_DIRECTORY}/${GAMEMASTER_NAME}/*.hpp"
)

add_executable(${GAMEMASTER_NAME} ${GAMEMASTER_FILES})
target_include_directories(${GAMEMASTER_NAME} PUBLIC "${PROJECT_DIRECTORY}")
target_include_directories(${GAMEMASTER_NAME} PUBLIC "${PROJECT_DIRECTORY}/${GAMEMASTER_NAME}")
target_link_libraries(${GAMEMASTER_NAME} ${GAMEMASTER_LIBRARIES} ${LEXICON_NAME})
install(
    TARGETS ${GAMEMASTER_NAME}
    RUNTIME DESTINATION "."
)

## MODULES ##

set(MODULE_INSTALL_PREFIX "modules")
add_subdirectory("client-glfw")
