set(CLIENTGLFW_NAME "client-glfw")

set(CLIENTGLFW_LIBRARIES "-lGL -lGLEW -lglfw")
file(GLOB CLIENTGLFW_FILES
    "${PROJECT_DIRECTORY}/${CLIENTGLFW_NAME}/*.c"
    "${PROJECT_DIRECTORY}/${CLIENTGLFW_NAME}/*.h"
    "${PROJECT_DIRECTORY}/${CLIENTGLFW_NAME}/*.cpp"
    "${PROJECT_DIRECTORY}/${CLIENTGLFW_NAME}/*.hpp"
)

add_library(${CLIENTGLFW_NAME} MODULE ${CLIENTGLFW_FILES})
target_include_directories(${CLIENTGLFW_NAME} PUBLIC "${PROJECT_DIRECTORY}")
target_include_directories(${CLIENTGLFW_NAME} PUBLIC "${PROJECT_DIRECTORY}/${CLIENTGLFW_NAME}")
target_link_libraries(${CLIENTGLFW_NAME} ${CLIENTGLFW_LIBRARIES} "${LEXICON_NAME}")
install(
    TARGETS ${CLIENTGLFW_NAME}
    LIBRARY DESTINATION "${MODULE_INSTALL_PREFIX}"
)
